[package]
name = "tachys-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.30", default-features = false, features = ["x11", "rwh_06"] }
softbuffer = "0.4"
tiny-skia = { version = "0.11", default-features = false, features = ["std", "simd"] }
skrifa = "0.20"

slotmap = "1.0"
once_map = "0.4"
dashmap = "6.0"


log = { version = "0.4", features = ["release_max_level_trace", "max_level_trace"] }
thiserror = "1.0"
dirs-2 = "3.0"
memmap2 = "0.9"
walkdir = "2"
